--- a/Modulo10/analisis_estadistico.ipynb
+++ b/Modulo10/analisis_estadistico.ipynb
@@ -12,6 +12,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<p id=\"start\"></p>[![Home](https://xavi783.github.io/u-tad/images/SVG/home.svg)](https://xavi783.github.io/u-tad)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "#Analisis Estad\u00edstico\n",
       "### Por: Javier Serrano\n",
       "\n",
@@ -784,6 +791,13 @@
       "- Ampliar el espacio de features local\n",
       "\n",
       "Adem\u00e1s, tambi\u00e9n podemos utilizar el paquete [sklearns](http://scikit-learn.org/stable/) para construir regresiones y probar mejor el ajuste a nuevos DATOS.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[![Up](https://xavi783.github.io/u-tad/images/SVG/arrow-up.svg)](#start)"
      ]
     }
    ],
